Fix the build by adding an Effect to set initial dark mode

--- a/src/pages/styles/home.scss
+++ b/src/pages/styles/home.scss
@@ -70,6 +70,10 @@
     background-color: #393939;
   }
 
+  .Footer {
+    background-color: #444;
+  }
+
   .ProjectCard {
     background-color: #222;
   }
